--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </article>
         <article class="card">
             <a href="tech.html" aria-label="Technology Category">
-s                <img src="images/tech.jpg" alt="Technology Category - Technology trends and innovations" loading="lazy" width="300" height="220" decoding="async">
+                <img src="images/tech.jpg" alt="Technology Category - Technology trends and innovations" loading="lazy" width="300" height="220" decoding="async">
                 <span>Technology</span>
             </a>
         </article>
