--- a/MindNotes/leadership1.html
+++ b/MindNotes/leadership1.html
@@ -37,7 +37,7 @@
 
     <script>
         // Markdown 파일 로드 및 렌더링
-        fetch("bookclub.md") // Markdown 파일 경로
+        fetch("leadership1.md") // Markdown 파일 경로
             .then(response => {
                 if (!response.ok) {
                     throw new Error(`HTTP error! Status: ${response.status}`);
