--- a/mindnotes.html
+++ b/mindnotes.html
@@ -58,6 +58,7 @@
             { title: "독서모임", link: "/MindNotes/bookclub.html" },
             { title: "직시", link: "/MindNotes/직시.html" },
             { title: "책이 좋은 이유", link: "/MindNotes/책이좋은점.html" },
+            { title: "회복탄력성", link: "/MindNotes/happiness.html" },
             { title: "1장. 초짜 팀장, 떨려도 괜찮아", link: "/MindNotes/leadership1.html" }
         ];
 
