--- a/book.html
+++ b/book.html
@@ -64,7 +64,8 @@
            { title: "창조적 행위: 존재의 방식 - 릭루빈", link: "Book/creator.html" },
            { title: "도파민네이션 - 에나 램키", link: "Book/dopaminenation.html" },           
            { title: "내면소통 - 김주환", link: "Book/mindcommunication.html" },
-           { title: "내가 틀릴 수도 있습니다. - 비욘 나티코 린데블라드", link: "Book/Icanbewrong.html" }
+           { title: "내가 틀릴 수도 있습니다. - 비욘 나티코 린데블라드", link: "Book/Icanbewrong.html" },
+           { title: "공감은 지능이다 - 자밀자키", link: "Book/TheWarforKindness.html" }
         ];
 
         // State management
