--- a/book.html
+++ b/book.html
@@ -66,7 +66,8 @@
            { title: "내면소통 - 김주환", link: "Book/mindcommunication.html" },
            { title: "내가 틀릴 수도 있습니다. - 비욘 나티코 린데블라드", link: "Book/Icanbewrong.html" },
            { title: "공감은 지능이다 - 자밀자키", link: "Book/TheWarforKindness.html" },
-           { title: "듀얼브레인 - 이선몰릭", link: "Book/dualbrain.html" }
+           { title: "듀얼브레인 - 이선몰릭", link: "Book/dualbrain.html" },
+           { title: " 고전이 답했다 마땅히 살아야 할 삶에 대하여 - 고명환", link: "Book/gojun.html" }
         ];
 
         // State management
