--- a/life.html
+++ b/life.html
@@ -62,7 +62,8 @@
             { title: "순두부국", link: "/Life/soondooboo.html" },
             { title: "시금치나물", link: "/Life/sigmchi.html" },
             { title: "숙주나물", link: "/Life/sukjoo.html" },
-            { title: "미역국", link: "/Life/miyuk.html" }
+            { title: "미역국", link: "/Life/miyuk.html" },
+            { title: "야미야미 덮밥", link: "/Life/dubbab.html" }
         ];
 
 
