--- a/book.html
+++ b/book.html
@@ -67,7 +67,11 @@
            { title: "내가 틀릴 수도 있습니다. - 비욘 나티코 린데블라드", link: "Book/Icanbewrong.html" },
            { title: "공감은 지능이다 - 자밀자키", link: "Book/TheWarforKindness.html" },
            { title: "듀얼브레인 - 이선몰릭", link: "Book/dualbrain.html" },
-           { title: " 고전이 답했다 마땅히 살아야 할 삶에 대하여 - 고명환", link: "Book/gojun.html" }
+           { title: "고전이 답했다 마땅히 살아야 할 삶에 대하여 - 고명환", link: "Book/gojun.html" }
+           { title: "고전이 답했다 마땅히 가져야 할 부에 대하여 - 고명환", link: "Book/bu.html" }
+           { title: "편안함의 습격 - 마이클 이스터", link: "Book/comfortcrisis.html" },
+           { title: "뇌가 힘들 땐 미술관에 가는 게 좋다. - 수전 매그새먼", link: "Book/misul.html" },
+           { title: "나는 왜 마음 놓고 쉬지 못할까 - 김은영", link: "Book/suim.html" }
         ];
 
         // State management
