--- a/education.html
+++ b/education.html
@@ -34,6 +34,7 @@
     <link rel="stylesheet" href="styles/category.css">
     
     <!-- Load configuration and pagination modules -->
+    <script src="js/postTitleLoader.js"></script>
     <script src="js/config.js"></script>
     <script src="js/pagination.js"></script>
 </head>
@@ -66,9 +67,10 @@
                 const educationCategory = config.getCategory('education');
                 
                 if (educationCategory && educationCategory.posts) {
-                    // Initialize pagination with data from config
+                    // Initialize pagination with data from config (markdown H1 overrides titles)
                     const paginationOptions = config.getPagination();
-                    new Pagination('postList', educationCategory.posts, paginationOptions.postsPerPage, paginationOptions);
+                    const postsWithMarkdownTitles = await loadPostsWithMarkdownTitles(educationCategory.posts);
+                    new Pagination('postList', postsWithMarkdownTitles, paginationOptions.postsPerPage, paginationOptions);
                 } else {
                     console.error('Education category data not found');
                     document.getElementById('postList').innerHTML = '<p>No posts found.</p>';
