back to home 버튼 변경

--- a/mindnotes.html
+++ b/mindnotes.html
@@ -41,7 +41,7 @@
 <body>
     <header>
         <h1>Mind Notes Category</h1>
-        <a href="index.html" aria-label="Back to Home">← Back to Home</a>
+        <a href="index.html" aria-label="Back to Home">Back to Home</a>
     </header>
     <main class="container" role="main">
         <h2>Mind Notes List</h2>
