--- a/book.html
+++ b/book.html
@@ -36,7 +36,7 @@
 <body>
     <header>
         <h1>Book Category</h1>
-        <a href="index.html" aria-label="Back to Home">??Back to Home</a>
+        <a href="index.html" aria-label="Back to Home">Back to Home</a>
     </header>
     <main class="container" role="main">
         <h2>Book List</h2>
