--- a/tech.html
+++ b/tech.html
@@ -41,7 +41,7 @@
 <body>
     <header>
         <h1>Technology Category</h1>
-        <a href="index.html" aria-label="Back to Home">← Back to Home</a>
+        <a href="index.html" aria-label="Back to Home">Back to Home</a>
     </header>
     <main class="container" role="main">
         <h2>Technology List</h2>
