블로그 이름 수정

--- a/education.html
+++ b/education.html
@@ -41,7 +41,10 @@
 </head>
 <body>
     <header>
-        <div class="brand"><a href="index.html">Readmuch</a></div>
+        <div class="brand-block">
+            <a class="brand-title" href="index.html">Readmuch's Blog</a>
+            <span class="brand-subtitle">Exploring the intersection of knowledge and creativity</span>
+        </div>
         <nav class="tab-nav" aria-label="Categories">
             <a class="tab" href="book.html">Book</a>
             <a class="tab active" href="education.html">Education</a>
