--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
 </head>
 <body>
     <header>
-        <div class="brand">Readmuch's Blog</div>
+        <div class="brand-block">
+            <span class="brand-title">Readmuch's Blog</span>
+            <span class="brand-subtitle">Exploring the intersection of knowledge and creativity</span>
+        </div>
         <nav class="tab-nav" aria-label="Categories">
             <a class="tab active" href="index.html">All Posts</a>
             <a class="tab" href="book.html">Book</a>
