포스팅 수정

--- a/book.html
+++ b/book.html
@@ -41,6 +41,7 @@
             <span class="brand-subtitle">Exploring the intersection of knowledge and creativity</span>
         </div>
         <nav class="tab-nav" aria-label="Categories">
+            <a class="tab active" href="index.html">All Posts</a>
             <a class="tab active" href="book.html">Book</a>
             <a class="tab" href="education.html">Education</a>
             <a class="tab" href="life.html">Life</a>
