--- a/book.html
+++ b/book.html
@@ -82,7 +82,8 @@
                 if (bookCategory && Array.isArray(bookCategory.posts) && bookCategory.posts.length > 0) {
                     const paginationOptions = config.getPagination();
                     const postsWithMarkdownMeta = await loadPostsWithMarkdownMeta(bookCategory.posts, { badge: 'Book' });
-                    const pagination = new Pagination('postList', postsWithMarkdownMeta, paginationOptions.postsPerPage, paginationOptions);
+                    const sorted = postsWithMarkdownMeta.sort((a, b) => new Date(b.date || 0) - new Date(a.date || 0));
+                    const pagination = new Pagination('postList', sorted, paginationOptions.postsPerPage, paginationOptions);
 
                     const searchInput = document.getElementById('postSearch');
                     if (searchInput) {
