--- a/Tech/openai-dropout-six-lessons.html
+++ b/Tech/openai-dropout-six-lessons.html
@@ -1,9 +1,9 @@
-ï»¿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Markdown Viewer - ê³ ë“±í•™êµ ì¤‘í‡´ í›„ OpenAI ì…ì‚¬</title>
+    <title>Markdown Viewer - °íµîÇĞ±³ ÁßÅğ ÈÄ OpenAI ÀÔ»ç</title>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <style>
         body {
@@ -11,14 +11,12 @@
             line-height: 1.6;
             margin: 20px;
             padding: 20px;
-            user-select: none;
         }
         pre {
             background: #f4f4f4;
             padding: 10px;
             border-radius: 5px;
             overflow-x: auto;
-            user-select: none;
         }
         h1, h2, h3 {
             color: #333;
@@ -28,11 +26,10 @@
             color: #555;
             border-left: 4px solid #ccc;
             padding-left: 10px;
-            user-select: none;
         }
     </style>
 </head>
-<body oncontextmenu="return false;">
+<body>
     <div id="content"></div>
 
     <script>
