--- a/Tech/ai-four-truths-2025.html
+++ b/Tech/ai-four-truths-2025.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,14 +11,12 @@
             line-height: 1.6;
             margin: 20px;
             padding: 20px;
-            user-select: none;
         }
         pre {
             background: #f4f4f4;
             padding: 10px;
             border-radius: 5px;
             overflow-x: auto;
-            user-select: none;
         }
         h1, h2, h3 {
             color: #333;
@@ -28,11 +26,10 @@
             color: #555;
             border-left: 4px solid #ccc;
             padding-left: 10px;
-            user-select: none;
         }
     </style>
 </head>
-<body oncontextmenu="return false;">
+<body>
     <div id="content"></div>
 
     <script>
