--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Readmuch's Blog - Exploring the intersection of knowledge and creativity">
+    <meta name="description" content="Exploring the intersection of knowledge and creativity">
     <meta name="keywords" content="Book, Education, Technology, Life, Mindnotes">
     <meta name="theme-color" content="#f8f8f8">
     <meta name="color-scheme" content="light">
@@ -49,8 +49,8 @@
             <a class="tab" href="index.html">All Posts</a>
             <a class="tab" href="book.html">Book</a>
             <a class="tab" href="education.html">Education</a>
-            <a class="tab" href="life.html">Life</a>
-            <a class="tab" href="tech.html">Tech</a>
+            <a class="tab" href="life.html">Lifestyle</a>
+            <a class="tab" href="tech.html">Technology</a>
             <a class="tab" href="mindnotes.html">Mind Notes</a>
         </nav>
         <div class="header-actions">
