백링크추가

--- a/book.html
+++ b/book.html
@@ -36,11 +36,19 @@
 </head>
 <body>
     <header>
-        <h1>Book Category</h1>
-        <p>Book reviews and literary discussions</p>
-        
-        <a href="index.html" aria-label="Back to Home">Back to Home</a>
-        
+        <div class="brand-block">
+            <a href="index.html" class="brand-title">Readmuch</a>
+            <span class="brand-subtitle">Book reviews and literary discussions</span>
+        </div>
+        <nav class="tab-nav" aria-label="Categories">
+            <a class="tab" href="index.html">All Posts</a>
+            <a class="tab" href="book.html">Book</a>
+            <a class="tab" href="education.html">Education</a>
+            <a class="tab" href="life.html">Lifestyle</a>
+            <a class="tab" href="tech.html">Technology</a>
+            <a class="tab" href="mindnotes.html">Mind Notes</a>
+        </nav>
+        <div class="header-actions"></div>
     </header>
 
     <main class="category-container" role="main">
