--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
     <header>
         <div class="brand-block">
-            <span class="brand-title">Readmuch's Blog</span>
+            <a href="index.html" class="brand-title">Readmuch</a>
             <span class="brand-subtitle">Exploring the intersection of knowledge and creativity</span>
         </div>
         <nav class="tab-nav" aria-label="Categories">
